added json file

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 </head>
 <body>
     <div id="react-container"></div>
-    <script src="js/RGridAjax.js" type="text/jsx" ></script>
+    <script src="js/RGridAjax.jsx" type="text/jsx" ></script>
 </body>
 </html>
