loaded data every 3 minutes

--- a/timer.html
+++ b/timer.html
@@ -21,7 +21,6 @@
 </head>
 <body>
     <div id="react-container"></div>
-    <script src="js/RGridAutoRefresh.jsx" type="text/jsx">
-    </script>
+    <script src="js/timer.jsx" type="text/jsx" ></script>
 </body>
 </html>
