updated the json

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div id="react-container"></div>
-    <script src="js/RGridAutoRefresh.jsx" type="text/jsx">
+    <script src="js/RGridChange.jsx" type="text/jsx">
     </script>
 </body>
 </html>
