--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 
     <!--Custom Styles -->
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+
+
+
+<meta http-equiv="cache-control" content="max-age=0" />
+<meta http-equiv="cache-control" content="no-cache" />
+<meta http-equiv="expires" content="0" />
+<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+<meta http-equiv="pragma" content="no-cache" />
+
+
     <title>React Bulletin Board</title>
 </head>
 <body>
