--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <div id="react-container"></div>
-    <script src="js/RGridChange.jsx" type="text/jsx">
+    <script src="js/RGridUsers.jsx" type="text/jsx">
     </script>
 </body>
 </html>
