--- a/Filter.html
+++ b/Filter.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <div id="react-container"></div>
-    <script src="js/RGridFilter.jsx" type="text/jsx">
+    <script src="js/Filter.jsx" type="text/jsx">
     </script>
 </body>
 </html>
