--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
     <title>React Bulletin Board</title>
 </head>
 <body>
-    <div id="react-container"></div>
-    <script src="js/RGridFilter.jsx" type="text/jsx">
-    </script>
+    <form class="pure-form">
+        <div id="react-container" class="rGrid"></div>
+        <script src="js/RGridFilter.jsx" type="text/jsx">
+        </script>
+    </form>
 </body>
 </html>
