--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
     <form class="pure-form">
         <div id="react-container" class="rGrid"></div>
-        <script src="js/RGridFilter.jsx" type="text/jsx">
+        <script src="js/RGridChild.jsx" type="text/jsx">
         </script>
     </form>
 </body>
