--- a/index.html
+++ b/index.html
@@ -31,43 +31,42 @@
 </head>
 <body>
     <form class="pure-form">
-        <!--<div>
+        <div>
             <br />
-            ID :<input type="text" id="txtID" />
-            Name: <input type="text" id="txtName" /><br />
-            Age: <input type="text" id="txtAge" />
-            LastName :<input type="text" id="txtLastName" />
-            Job : <input type="text" id="txtJob" /><br />
+            Name: <input type="text" id="txtName" value="Shinoy" />
+            LastName :<input type="text" id="txtLastName" value="Babu" />
+            Age: <input type="text" id="txtAge" value="35" />            
+            Job : <input type="text" id="txtJob" value="s/w eng" /><br />
             <input type="button" id="btnSave" value="Save" />
-        </div>-->        
+        </div>        
         <div id="react-container" class="rGrid"></div>
         <script src="js/RGridAPI.jsx" type="text/jsx">
         </script>
         <script type="text/javascript">
             
-            //$("#btnSave").click(
-            //    function () {
-            //        alert("ajax call");
+            $("#btnSave").click(
+                function () {
+                    $.ajax({
+                        crossOrigin: true,
+                        method:'POST',
+                        dataType:'json',
+                        contentType: 'application/json',
+                        url: 'http://binoy3-babu.rhcloud.com/rest/users',
+                        data: formToJSON(),
+                        success: function(data) {
+                            
+                        }
+                    });                 
+                });
 
-            //        var settings = {
-            //            "async": true,
-            //            "crossDomain": true,
-            //            "url": "http://binoy3-babu.rhcloud.com/rest/users/",
-            //            "method": "POST",
-            //            "headers": {
-            //                "content-type": "application/json",
-            //                "cache-control": "no-cache",
-            //                "postman-token": "89d680dd-9350-e423-3be4-9694051749d9"
-            //            },
-            //            "processData": false,
-            //            "data": "{\"id\":13,\"name\":\"Amritha\",\"age\":29,\"lastName\":\"Shinoy\",\"job\":\"s/w eng\"}"
-            //        }
-
-            //        $.ajax(settings).done(function (response) {
-            //            console.log(response);
-            //        });
-            //    }
-            //);
+            function formToJSON() {
+                return JSON.stringify({
+                    "name": $('#txtName').val(),
+                    "lastName": $('#txtLastName').val(),
+                    "age": $('#txtAge').val(),
+                    "job": $('#txtJob').val()
+                });
+            }
         </script>
     </form>
 </body>
