--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             Name: <input type="text" id="txtName" value="Shinoy" />
             LastName :<input type="text" id="txtLastName" value="Babu" />
             Age: <input type="text" id="txtAge" value="35" />            
-            Job : <input type="text" id="txtJob" value="s/w eng" /><br />
+            Job : <input type="text" id="txtJob" value="s/w eng" />
             <input type="button" id="btnSave" value="Save" />
         </div>        
         <div id="react-container" class="rGrid"></div>
